footer+minor OC changes

--- a/index.html
+++ b/index.html
@@ -496,12 +496,12 @@
                      <span>Media Head</span>
                   </li>    
                   <li class="card">
-                     <div class="img"><img src="./public/OC/me.jpg" alt="img" draggable="false"></div>
+                     <div class="img"><img src="./public/OC/Abhyuday.jpg" alt="img" draggable="false"></div>
                      <h2>Abhyuday Venkatesh</h2>
                      <span>Publicity Head</span>
                   </li>    
                   <li class="card">
-                     <div class="img"><img src="./public/OC/me.jpg" alt="img" draggable="false"></div>
+                     <div class="img"><img src="./public/OC/Sra .jpg" alt="img" draggable="false"></div>
                      <h2>Sra Bhatia</h2>
                      <span>Publicity Head</span>
                   </li>
@@ -526,12 +526,12 @@
       </div>
     <!--OC finishes-->
     <!--footer starts-->
-    <!-- <footer>
+     <footer>
         <div class="end">
             &#169; 2024 COLLOQUIUM. All Rights Reserved.<br>
             Made with &#9829; by ISTE Team.
         </div>
-    </footer> -->
+    </footer>
     <!--footer ends-->
    </body>
 </html>
