--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                   <input type="text" name="member2Name" placeholder="Member-2 name" required>
                   <input type="email" name="member2Email" placeholder="Member-2 Email" required>
                   <input type="number" name="member2Phone" placeholder="Member-2 Contact No." required>
-                  <button type="button" class="btn btn2" onclick="submitForm()">Submit</button>
+                  <button type="button" class="btn btn2" onclick="submitFormFallacy()">Submit</button>
                   <div class="button">
                </form>
                </div> 
@@ -215,7 +215,7 @@
         </div>
 
         <script>
-         function submitForm() {
+         function submitFormFallacy() {
             // Get form data
             const form = document.getElementById('fallacy');
             const formData = new FormData(form);
