--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                <i id="left" class="fa-solid fa-angle-left"></i>
                <ul class="carousel">
                   <li class="card">
-                  <div class="img"><img src="./public/OC/me.jpg" alt="img" draggable="false"></div>
+                  <div class="img"><img src="./public/OC/yash.jpg" alt="img" draggable="false"></div>
                   <h2>Yash Bhargava</h2>
                   <span>(Overall Event Coordinator)</span>
                   </li>
@@ -499,7 +499,7 @@
                      <span>(Technical Head)</span>
                   </li>
                   <li class="card">
-                     <div class="img"><img src="./public/OC/me.jpg" alt="img" draggable="false"></div>
+                     <div class="img"><img src="./public/OC/Vivek.JPG" alt="img" draggable="false"></div>
                      <h2>Vivek Arora</h2>
                      <span>(Technical Head)</span>
                   </li>
@@ -529,7 +529,7 @@
                   <span>(Content Head)</span>
                   </li>
                   <li class="card">
-                     <div class="img"><img src="./public/OC/me.jpg" alt="img" draggable="false"></div>
+                     <div class="img"><img src="./public/OC/khushpreet.jpg" alt="img" draggable="false"></div>
                      <h2>Khushpreet Singh</h2>
                      <span>(Content Head)</span>
                      </li>
