--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
      <footer>
         <div class="end">
             &#169; 2024 COLLOQUIUM. All Rights Reserved.<br>
-            Made with &#9829; by ISTE Team. <br>
+            Made with &#9829; by ISTE Team. 
         </div>
     </footer>
     <!--footer ends-->
