text capitilize off

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                <div class="popup-right">
                
                <form id="fallacy">
-                  <input type="text" name="teamName" placeholder="Team Name" required>
+                  <input type="text" name="teamName" placeholder="Team Name (required field)" required>
                   <input type="text" name="member1Name" placeholder="Member-1 Name" required>
                   <input type="email" name="member1Email" placeholder="Member-1 Email" required>
                   <input type="number" name="member1Phone" placeholder="Member-1 Contact No." required>
