--- a/index.html
+++ b/index.html
@@ -199,13 +199,13 @@
                <div class="popup-right">
                
                <form id="fallacy">
-                  <input type="text" name="teamName" placeholder="Team Name" required>
-                  <input type="text" name="member1Name" placeholder="Member-1 Name" required>
-                  <input type="email" name="member1Email" placeholder="Member-1 Email" required>
-                  <input type="number" name="member1Phone" placeholder="Member-1 Contact No." required>
-                  <input type="text" name="member2Name" placeholder="Member-2 name" required />
-                  <input type="email" name="member2Email" placeholder="Member-2 Email" required />
-                  <input type="number" name="member2Phone" placeholder="Member-2 Contact No." required />
+                  <input required="required" type="text" name="teamName" placeholder="Team Name" />
+                  <input required="required" type="text" name="member1Name" placeholder="Member-1 Name" />
+                  <input required="required" type="email" name="member1Email" placeholder="Member-1 Email" />
+                  <input required="required" type="tel" name="member1Phone" placeholder="Member-1 Contact No." />
+                  <input required="required" type="text" name="member2Name" placeholder="Member-2 name"  />
+                  <input required="required" type="email" name="member2Email" placeholder="Member-2 Email"  />
+                  <input required="required" type="tel" name="member2Phone" placeholder="Member-2 Contact No."  />
                   <button type="button" class="btn btn2" onclick="submitFormFallacy()">Submit</button>
                   <div class="button">
                </form>
@@ -239,7 +239,8 @@
        .then(data => {
         // Handle the response from the API
         console.log('Success:', data);
-      }).then(()=>alert('Registration successful'))
+        alert('Registration successful');
+      })
       .catch(error => {
         // Handle errors
         console.error('Error:', error);
