--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
                <li><a href="#home">Home</a></li>
                <li><a href="#Events">Event Details</a></li>
                <li><a href="#sponsor">Sponsors</a></li>
-               <li><a href="#OC">OC of the Event</a></li>
-               <!-- <li><a href="#">Contact Us</a></li> -->
-            
+               <li><a href="#OC">Organizing Committee</a></li>            
             </div>
             
          </ul>
@@ -494,15 +492,15 @@
                   <span>(Documentation Head)</span>
                   </li>
                   <li class="card">
-                     <div class="img"><img src="./public/OC/arjun.jpg" alt="img" draggable="false"></div>
-                     <h2>Arjun Shekhar</h2>
-                     <span>(Logistics Head)</span>
-                  </li>  
-                  <li class="card">
                      <div class="img"><img src="./public/OC/jini.png" alt="img" draggable="false"></div>
                      <h2>Jini Manchanda</h2>
                      <span>(Logistics Head)</span>
                   </li> 
+                  <li class="card">
+                     <div class="img"><img src="./public/OC/arjun.jpg" alt="img" draggable="false"></div>
+                     <h2>Arjun Shekhar</h2>
+                     <span>(Logistics Head)</span>
+                  </li>  
                   <li class="card">
                      <div class="img"><img src="./public/OC/me.jpg" alt="img" draggable="false"></div>
                      <h2>Aabharan Gupta</h2>
