--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                alert('Registration unsuccessful');
          }
         console.log('Success:', data);
-      }).then(()=>alert('Registration successful'))
+      }) 
       .catch(error => {
         // Handle errors
         console.error('Error:', error);
@@ -285,7 +285,7 @@
                alert('Registration unsuccessful');
          }
         console.log('Success:', data);
-      }).then(()=>alert('Registration successful'))
+      })
       .catch(error => {
         // Handle errors
         console.error('Error:', error);
@@ -324,19 +324,19 @@
               <div class="popup-right">
               </div>
               <form id="circuitrix"> 
-               <input type="text" name="Name" placeholder="Team Name" required>
-               <input type="text" name="Name" placeholder="Member-1 Name" required>
-               <input type="Email" name="Email" placeholder="Member-1 Email" required>
-               <input type="number" name="Contact No." placeholder="Member-1 Contact No." required>
-               <input type="text" name="Name" placeholder="Member-2 name" >
-               <input type="Email" name="Email" placeholder="Member-2 Email" >
-               <input type="number" name="Contact No." placeholder="Member-2 Contact No." >
-               <input type="text" name="Name" placeholder="Member-3 name" >
-               <input type="Email" name="Email" placeholder="Member-3 Email" >
-               <input type="number" name="Contact No." placeholder="Member-4 Contact No." >
-               <input type="text" name="Name" placeholder="Member-4 name">
-               <input type="Email" name="Email" placeholder="Member-4 Email">
-               <input type="number" name="Contact No." placeholder="Member-4 Contact No.">
+               <input type="text" name="teamName" placeholder="Team Name" required>
+               <input type="text" name="leaderName placeholder="Member-1 Name" required>
+               <input type="Email" name="leaderEmail" placeholder="Member-1 Email" required>
+               <input type="number" name="leaderPhone" placeholder="Member-1 Contact No." required>
+               <input type="text" name="member2Name" placeholder="Member-2 name" >
+               <input type="Email" name="member2Email" placeholder="Member-2 Email" >
+               <input type="number" name="member2Phone" placeholder="Member-2 Contact No." >
+               <input type="text" name="member3Name" placeholder="Member-3 name" >
+               <input type="Email" name="member3Email" placeholder="Member-3 Email" >
+               <input type="number" name="member3Phone" placeholder="Member-4 Contact No." >
+               <input type="text" name="member4Name" placeholder="Member-4 name">
+               <input type="Email" name="member4Email" placeholder="Member-4 Email">
+               <input type="number" name="member4Phone" placeholder="Member-4 Contact No.">
                <button type="submit" class="btn btn2" onclick="submitFormCircuitrix()">Submit</button>
                <div class="button">
             </form>
@@ -376,7 +376,7 @@
                alert('Registration unsuccessful');
          }
         console.log('Success:', data);
-      }).then(()=>alert('Registration successful'))
+      })
       .catch(error => {
         // Handle errors
         console.error('Error:', error);
@@ -403,9 +403,9 @@
               <div class="popup-right">
                
                  <form id="arcane">
-                  <input type="text" name="Name" placeholder="Player Name" required>
-                  <input type="Email" name="Email" placeholder="Player Email" required>
-                  <input type="number" name="Contact No." placeholder="Player Number" required>
+                  <input type="text" name="name" placeholder="Player Name" required>
+                  <input type="Email" name="email" placeholder="Player Email" required>
+                  <input type="number" name="phoneNumber" placeholder="Player Number" required>
                   <button type="submit" class="btn btn2" onclick="submitFormArcane()">Submit</button>
                   <div class="button">
                  </form>
@@ -446,7 +446,7 @@
                alert('Registration unsuccessful');
          }
         console.log('Success:', data);
-      }).then(()=>alert('Registration successful'))
+      })
       .catch(error => {
         // Handle errors
         console.error('Error:', error);
@@ -483,19 +483,19 @@
               <div class="popup-right">
             </div>
               <form id="buzzinga">
-                  <input type="text" name="Name" placeholder="Team Name" required>
-                  <input type="text" name="Name" placeholder="Member-1 Name" required>
-                  <input type="Email" name="Email" placeholder="Member-1 Email" required>
-                  <input type="number" name="Contact No." placeholder="Member-1 Contact No" required>
-                  <input type="text" name="Name" placeholder="Member-2 name" >
-                  <input type="Email" name="Email" placeholder="Member-2 Email" >
-                  <input type="number" name="Contact No." placeholder="Member-2 Contact No" >
-                  <input type="text" name="Name" placeholder="Member-3 name" >
-                  <input type="Email" name="Email" placeholder="Member-3 Email" >
-                  <input type="number" name="Contact No." placeholder="Member-4 Contact No" >
-                  <input type="text" name="Name" placeholder="Member-4 name">
-                  <input type="Email" name="Email" placeholder="Member-4 Email">
-                  <input type="number" name="Contact No." placeholder="Member-4 Contact No">
+                  <input type="text" name="teamName" placeholder="Team Name" required>
+                  <input type="text" name="leaderName" placeholder="Member-1 Name" required>
+                  <input type="Email" name="leaderEmail" placeholder="Member-1 Email" required>
+                  <input type="number" name="leaderPhone" placeholder="Member-1 Contact No" required>
+                  <input type="text" name="member2Name" placeholder="Member-2 name" >
+                  <input type="Email" name="member2Email" placeholder="Member-2 Email" >
+                  <input type="number" name="member2Phone" placeholder="Member-2 Contact No" >
+                  <input type="text" name="member3Name" placeholder="Member-3 name" >
+                  <input type="Email" name="member3Email" placeholder="Member-3 Email" >
+                  <input type="number" name="member3Phone" placeholder="Member-4 Contact No" >
+                  <input type="text" name="member4Name" placeholder="Member-4 name">
+                  <input type="Email" name="member4Email" placeholder="Member-4 Email">
+                  <input type="number" name="member4Phone" placeholder="Member-4 Contact No">
                   <button type="submit" class="btn btn2" onclick="submitFormBuzzinga()">Submit</button>
                   <div class="button">
                </form>
@@ -537,7 +537,7 @@
                alert('Registration unsuccessful');
          }
         console.log('Success:', data);
-      }).then(()=>alert('Registration successful'))
+      })
       .catch(error => {
         // Handle errors
         console.error('Error:', error);
