--- a/index.html
+++ b/index.html
@@ -477,8 +477,8 @@
    </div>
     <!--event details finishes-->
     <!--sponser starts-->
-   <div class="sponser">
-      <div class="sponsers" id="sponsor">
+   <div class="sponser" id="sponsor">
+      <div class="sponsers">
          <h1>SPONSORS</h1>
       </div>
       <div class="tag" ><h1>Platinum Sponsors</h1></div>
