--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
       <meta charset="utf-8">
        <title> Colloquium X </title> 
        <!--PRELOADER-->
-       <link rel="stylesheet" href="./css/preloader.css">
-       <script src="./js/loader.js"></script>
+       <!-- <link rel="stylesheet" href="./css/preloader.css">
+       <script src="./js/loader.js"></script> -->
        <!--NAVBAR-->
             <link rel="stylesheet" href="./css/Navbar.css">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -239,7 +239,7 @@
          });
 
         // Make a POST request using the fetch API with 'Content-Type: application/json'
-        fetch('http://localhost:3000/register/reckon', {
+        fetch('https://iste-registeration-backend.vercel.app/register/reckon', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
@@ -323,7 +323,7 @@
          });
 
         // Make a POST request using the fetch API with 'Content-Type: application/json'
-        fetch('http://localhost:3000/register/fallacy', {
+        fetch('https://iste-registeration-backend.vercel.app/fallacy', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
@@ -413,7 +413,7 @@
          });
 
         // Make a POST request using the fetch API with 'Content-Type: application/json'
-        fetch('http://localhost:3000/register/circuitrix', {
+        fetch('https://iste-registeration-backend.vercel.app/circuitrix', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
@@ -505,7 +505,7 @@
          });
 
         // Make a POST request using the fetch API with 'Content-Type: application/json'
-        fetch('http://localhost:3000/register/buzzinga', {
+        fetch('https://iste-registeration-backend.vercel.app/buzzinga', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
