--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
          });
 
         // Make a POST request using the fetch API with 'Content-Type: application/json'
-        fetch('https://iste-registeration-backend.vercel.app/fallacy', {
+        fetch('https://iste-registeration-backend.vercel.app/register/fallacy', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
@@ -413,7 +413,7 @@
          });
 
         // Make a POST request using the fetch API with 'Content-Type: application/json'
-        fetch('https://iste-registeration-backend.vercel.app/circuitrix', {
+        fetch('https://iste-registeration-backend.vercel.app/register/circuitrix', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
@@ -505,7 +505,7 @@
          });
 
         // Make a POST request using the fetch API with 'Content-Type: application/json'
-        fetch('https://iste-registeration-backend.vercel.app/buzzinga', {
+        fetch('https://iste-registeration-backend.vercel.app/register/buzzinga', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
