--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
          });
 
         // Make a POST request using the fetch API with 'Content-Type: application/json'
-        fetch('https://iste-registeration-backend.vercel.app/register/reckon', {
+        fetch('https://colloquium10.onrender.com/register/reckon', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
@@ -315,7 +315,7 @@
          });
 
         // Make a POST request using the fetch API with 'Content-Type: application/json'
-        fetch('https://iste-registeration-backend.vercel.app/register/fallacy', {
+        fetch('https://colloquium10.onrender.com/register/fallacy', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
@@ -405,7 +405,7 @@
          });
 
         // Make a POST request using the fetch API with 'Content-Type: application/json'
-        fetch('https://iste-registeration-backend.vercel.app/register/circuitrix', {
+        fetch('https://colloquium10.onrender.com/register/circuitrix', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
@@ -497,7 +497,7 @@
          });
 
         // Make a POST request using the fetch API with 'Content-Type: application/json'
-        fetch('https://iste-registeration-backend.vercel.app/register/buzzinga', {
+        fetch('https://colloquium10.onrender.com/register/buzzinga', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
