--- a/index.html
+++ b/index.html
@@ -117,20 +117,12 @@
            <div class="container">
            <div class="popup-left">
               <i class="fas fa-times"></i>
-              <img src="./public/eventDetails/11852467_4799098.jpg" alt="Event 1">
+              <img src="./public/eventDetails/reckon png@3x.png" alt="Event 1">
               <h3>RECKON</h3>
               <div class="price">17 February 24</div>
-              <p>During this event, participants will be challenged
-               to solve cybersecurity exercises on an ISTE
-               platform, discovering hidden flags in vulnerable
-               programs and websites with clues and hints
-               provided for each question. Team needs a minimum of 3 players to register for the event.Teams solve
-               questions using different deciphering techniques,
-               earning points for each correct answer. Points
-               decrease as more teams solve questions, adding
-               a dynamic challenge. The event emphasizes
-               speed and accuracy. The first team to clear the
-               final level is declared the winner.
+              <p>Calling all cyber sleuths and puzzle prodigies! Gear up for Reckon, the CTF showdown where you'll flag-hunt your 
+                to glory, cracking codes, exploiting vulnerabilities, and solving puzzles. Are you ready to reckon with the best and 
+                emerge as the ultimate champion?
               </p>              
            </div>
   
@@ -380,7 +372,6 @@
                  <img src="./public/eventDetails/11852467_4799098.jpg" alt="Event 1">
                  <h3>BUZZINGA</h3>
                  <div class="price">15 February 24</div>
-                 <div class="price">Location</div>
                  <p>Buzzinga, inspired by the popular shows "Jeopardy"
                   and "Catch 21,
                   " tests participants' skills in three
