--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-       <title> Colloquium X </title> 
+       <title> Colloquium 10 </title> 
        <!--NAVBAR-->
             <link rel="stylesheet" href="./css/Navbar.css">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -117,7 +117,7 @@
            <div class="container">
            <div class="popup-left">
               <i class="fas fa-times"></i>
-              <img src="./public/eventDetails/reckon png@3x.png" alt="Event 1">
+              <img src="./public/eventDetails/reckon png@3x.png" alt="Event 1" class="ctfimg">
               <h3>RECKON</h3>
               <div class="price">17 February 24</div>
               <p>Calling all cyber sleuths and puzzle prodigies! Gear up for Reckon, the CTF showdown where you'll flag-hunt your 
@@ -197,7 +197,7 @@
            <div class="container">
               <div class="popup-left">
                  <i class="fas fa-times"></i>
-                 <img src="./public/eventDetails/11852467_4799098.jpg" alt="Event 1">
+                 <img src="./public/eventDetails/Fallacy Logo.png" alt="Event 1" class="debugimg">
                  <h3>FALLACY</h3>
                  <div class="price">13 February 24</div>
                  <p>Fallacy is an engaging event centered around
@@ -278,7 +278,7 @@
            <div class="container">
               <div class="popup-left">
                  <i class="fas fa-times"></i>
-                 <img src="./public/eventDetails/11852467_4799098.jpg" alt="Event 1">
+                 <img src="./public/eventDetails/Circuitrix Logo.png" alt="Event 1" class="circuitlogo">
                  <h3>CIRCUITRIX</h3>
                  <div class="price">15 February 24</div>
                  <p>"Circuitrix" is an exciting electronic circuit-building
@@ -369,7 +369,7 @@
            <div class="container">
               <div class="popup-left">
                  <i class="fas fa-times"></i>
-                 <img src="./public/eventDetails/11852467_4799098.jpg" alt="Event 1">
+                 <img src="./public/eventDetails/buzzinga black logo.png" alt="Event 1" class="buzzimg">
                  <h3>BUZZINGA</h3>
                  <div class="price">15 February 24</div>
                  <p>Buzzinga, inspired by the popular shows "Jeopardy"
