--- a/index.html
+++ b/index.html
@@ -86,22 +86,22 @@
          <div class="products-container">
             <div class="layer1">
                <div class="product" data-name="p-2">
-                  <img src="./public/eventDetails/eventLogo.png" alt="FALLACY">
+                  <img src="./public/eventDetails/Fallacy Logo.png" alt="FALLACY">
                   <h3>FALLACY</h3>
                   <div class="price">13 February 24</div>
                </div>
                <div class="product" data-name="p-3">
-                  <img src="./public/eventDetails/eventLogo.png" alt="CIRCUITRIX">
+                  <img src="./public/eventDetails/Circuitrix Logo.png" alt="CIRCUITRIX">
                   <h3>CIRCUITRIX</h3>
                   <div class="price">15 February 24</div>
                </div>
                <div class="product" data-name="p-5">
-                  <img src="./public/eventDetails/eventLogo.png" alt="BUZZINGA">
+                  <img src="./public/eventDetails/buzzinga black logo.png" alt="BUZZINGA">
                   <h3>BUZZINGA</h3>
                   <div class="price">16 February 24</div>
                </div> 
                <div class="product" data-name="p-1">
-                  <img src="./public/eventDetails/eventLogo.png" alt="RECKON">
+                  <img src="./public/eventDetails/reckon1.png" alt="RECKON">
                   <h3>RECKON</h3>
                   <div class="price">17 February 24</div>
                </div>
@@ -117,7 +117,7 @@
            <div class="container">
            <div class="popup-left">
               <i class="fas fa-times"></i>
-              <img src="./public/eventDetails/reckon png@3x.png" alt="Event 1" class="ctfimg">
+              <img src="./public/eventDetails/reckon1.png" alt="Event 1">
               <h3>RECKON</h3>
               <div class="price">17 February 24</div>
               <p>Calling all cyber sleuths and puzzle prodigies! Gear up for Reckon, the CTF showdown where you'll flag-hunt your 
@@ -197,7 +197,7 @@
            <div class="container">
               <div class="popup-left">
                  <i class="fas fa-times"></i>
-                 <img src="./public/eventDetails/Fallacy Logo.png" alt="Event 1" class="debugimg">
+                 <img src="./public/eventDetails/Fallacy Logo.png" alt="Event 1">
                  <h3>FALLACY</h3>
                  <div class="price">13 February 24</div>
                  <p>Fallacy is an engaging event centered around
@@ -278,7 +278,7 @@
            <div class="container">
               <div class="popup-left">
                  <i class="fas fa-times"></i>
-                 <img src="./public/eventDetails/Circuitrix Logo.png" alt="Event 1" class="circuitlogo">
+                 <img src="./public/eventDetails/Circuitrix Logo.png" alt="Event 1">
                  <h3>CIRCUITRIX</h3>
                  <div class="price">15 February 24</div>
                  <p>"Circuitrix" is an exciting electronic circuit-building
@@ -369,7 +369,7 @@
            <div class="container">
               <div class="popup-left">
                  <i class="fas fa-times"></i>
-                 <img src="./public/eventDetails/buzzinga black logo.png" alt="Event 1" class="buzzimg">
+                 <img src="./public/eventDetails/buzzinga black logo.png" alt="Event 1">
                  <h3>BUZZINGA</h3>
                  <div class="price">15 February 24</div>
                  <p>Buzzinga, inspired by the popular shows "Jeopardy"
@@ -485,7 +485,10 @@
          <a href="https://www.hitbullseye.com/" target="_blank"><img src="./public/sponserImages/hitbullseye2.png" alt="" class="sponserImg"></a>
          <h2>HitBullseye</h2>
          </div>
-         
+         <div class="sponseritem">
+            <a href="https://sprect.com/" target="_blank"><img src="./public/sponserImages/sprect.jpg" alt="" class="sponserImg"></a>
+            <h2>HitBullseye</h2>
+            </div>
       </div> 
       <div class="tag" style="padding-top: 10rem;"><h1>Silver Sponsors</h1></div>
       <div class="sponserContainer">
