--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
          </div>
          <div class="sponseritem">
             <a href="https://sprect.com/" target="_blank"><img src="./public/sponserImages/sprect.jpg" alt="" class="sponserImg"></a>
-            <h2>HitBullseye</h2>
+            <h2>Sprect</h2>
             </div>
       </div> 
       <div class="tag" style="padding-top: 10rem;"><h1>Silver Sponsors</h1></div>
