--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!--navbar finishes--> 
     <!--hero section starts-->
     <div id="home">
-      <img src="./public/logo.png" alt="EventLogo" id="hero">
+      <img src="./public/logo.png" height="250px" width="100%" alt="EventLogo" id="hero">
     </div>
     <!--hero section finishes-->
     <!--event details starts-->
