--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
        .then(response => response.json())
        .then(data => {
         // Handle the response from the API
-        if(data.status == true)
+        if(data.status === true)
          {
                alert('Registration successful');
          }
@@ -345,7 +345,7 @@
        .then(response => response.json())
        .then(data => {
         // Handle the response from the API
-        if(data.status == true)
+        if(data.status === true)
          {
                alert('Registration successful');
          }
@@ -436,7 +436,7 @@
        .then(response => response.json())
        .then(data => {
         // Handle the response from the API
-        if(data.status == true)
+        if(data.status === true)
          {
                alert('Registration successful');
          }
