--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
        .then(response => response.json())
        .then(data => {
         // Handle the response from the API
-        if(data.status === true)
+        if(data?.status === true)
          {
                alert('Registration successful');
          }
