--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
          });
 
         // Make a POST request using the fetch API with 'Content-Type: application/json'
-        fetch('https://colloquium10.onrender.com/register/buzzinga', {
+        fetch('https://iste-registeration-backend-ten.vercel.app/register/buzzinga', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
