--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                   <input type="text" name="member4Name" placeholder="Member-4 name">
                   <input type="Email" name="member4Email" placeholder="Member-4 Email">
                   <input type="number" name="member4Phone" placeholder="Member-4 Contact No">
-                  <button type="submit" class="btn btn2" onclick="submitFormBuzzinga()">Submit</button>
+                  <button type="submit" class="btn btn2" onclick={submitFormBuzzinga()}>Submit</button>
                   <div class="button">
                </form>
 
