--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                  <input type="text" name="member3Name" placeholder="Member-3 name" >
                  <input type="Email" name="member3Email" placeholder="Member-3 Email" >
                  <input type="number" name="member3Phone" placeholder="Member-3 Contact No." >
-                 <button type="submit" class="btn btn2" onclick="submitFormReckon()">Submit</button>
+                 <button type="submit" class="btn btn2" onclick={submitFormReckon()}>Submit</button>
                  <div class="button">
               </form>
            </div>
@@ -315,7 +315,7 @@
                <input type="text" name="member4Name" placeholder="Member-4 name">
                <input type="Email" name="member4Email" placeholder="Member-4 Email">
                <input type="number" name="member4Phone" placeholder="Member-4 Contact No.">
-               <button type="submit" class="btn btn2" onclick="submitFormCircuitrix()">Submit</button>
+               <button type="submit" class="btn btn2" onclick={submitFormCircuitrix()}>Submit</button>
                <div class="button">
             </form>
               </div>
